[package]
name = "bevy_ui_anchor"
version = "0.6.0"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2021"
description = "A small bevy plugin for anchoring UI elements to specific points or entities in the world "
license = "MIT"
repository = "https://github.com/TotalKrill/bevy_ui_anchor"
keywords = ["bevy", "ui"]
readme = "README.md"

[dependencies.bevy]
version = "0.16.0"
default-features = false
features = ["bevy_ui", "bevy_window", "bevy_log"]

[dev-dependencies.bevy]
version = "0.16.0"
features = ["bevy_ui_debug", "bevy_ui"]

[dev-dependencies.bevy_rapier3d]
# git = "https://github.com/Vrixyz/bevy_rapier.git"
# branch = "master-bevy_0.15"
version = "0.29"

[dev-dependencies.bevy_editor_cam]
# git = "https://github.com/Vrixyz/bevy_rapier.git"
# branch = "master-bevy_0.15"
version = "0.5"
